--- a/src/app/diretiva-ngswitch/diretiva-ngswitch.component.html
+++ b/src/app/diretiva-ngswitch/diretiva-ngswitch.component.html
@@ -1,1 +1,46 @@
-<p>diretiva-ngswitch works!</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link" 
+        [class.active]= "aba == 'home'"
+        (click)= "aba = 'home'">Home</a>
+        <a class="nav-item nav-link"
+        [class.active]= "aba == 'mapa'"
+        (click)= "aba = 'mapa'" >Mapa</a>
+        <a class="nav-item nav-link" 
+        [class.active]= "aba == 'lista'"
+        (click)= "aba = 'lista'"
+        >Lista</a>
+      </div>
+    </div>
+  </nav>
+
+  <div class=
+  "container"
+  [ngSwitch]= "aba">
+  <p *ngSwitchCase="'mapa'">Modo mapa ativado</p>
+  <p *ngSwitchCase="'lista'">Modo lista ativado</p>
+  <p *ngSwitchDefault>Home</p>
+  </div>
+
+  <!-- 
+    mesma coisa de:
+
+     <div class="container"
+     [ngSwitch]= "aba">
+
+    <template [ngSwitchCase]="'mapa'">
+      <p>
+        Modo mapa ativado
+      </p>
+    </template>
+    fazer um template para cada paragrafo
+    
+    SWITCH DEFAULT:
+
+    <template [ngSwitchCase]="'home'" ngSwitchDefault>
+      <p>Home</p>
+    </template>
+
+    </div>
+   -->
