--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,11 @@
 <!-- <app-diretiva-ngswitch></app-diretiva-ngswitch> -->
 <!-- <app-diretiva-ngfor></app-diretiva-ngfor> -->
 <!-- <app-diretiva-ngclass></app-diretiva-ngclass> -->
-<app-diretiva-ngstyle></app-diretiva-ngstyle>
+<!-- <app-diretiva-ngstyle></app-diretiva-ngstyle> -->
+<!-- <app-operador-elvis></app-operador-elvis> -->
+<!-- <app-exemplo-ng-content>
+    <div class="titulo">Título panel</div>
+    <div class="corpo">Corpo panel</div>
+    Conteúdo passado para o componente
+</app-exemplo-ng-content> -->
+<app-diretivas-customizadas></app-diretivas-customizadas>
